# Asteriods

./: .gitignore  README.md
Arcade Games BC/: .gitignore  CMakeLists.txt  README.md
Arcade Games BC/agents/: 00-main-project-orchestrator.md  01-cpp-sdl3-game-developer.md  02-porting-analyst-python-to-cpp.md  03-gameplay-designer.md  04-code-tester-qa.md  05-build-release-engineer.md  06-asset-audio-manager.md  07-ios-macos-platform-agent.md  08-retro-arcade-authenticity-agent.md  09-commercial-product-agent.md  Build_notes.md
Arcade Games BC/assets/sounds/: generate_enemy_saucer_alert.py  generate_wave_clear_fanfare.py
Arcade Games BC/assets/sounds/_temp_player_ship_death_review/: README.md  generate_player_ship_destroyed.py
Arcade Games BC/assets/sprites/_temp_asteroid_break_review/: README.md  generate_break_sprites.py  manifest.json  preview.html
Arcade Games BC/assets/sprites/_temp_enemy_saucer_explosion_review/: README.md  generate_saucer_explosion_review.py  manifest.json  preview.html
Arcade Games BC/assets/sprites/_temp_player_ship_explosion_review/: README.md  generate_player_ship_explosion_review.py  manifest.json  preview.html
Arcade Games BC/docs/: agent-usage-guide.md  initial-project-brief.md  project-recommendation.md
Arcade Games BC/docs/porting/: asteroids-reference-spec.md
Arcade Games BC/src/: Game.cpp  Game.h  main.cpp
Arcade Games BC/src/audio/: Rocks breaking.m4a
game_agent/: __init__.py  cli.py
games/: asteroids.py  centipede.py  lunar_lander.py  running .venv  space_invaders.py
